--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     <body>
         <header>
             <div class="header-left">
-                <h1><a class="title" href="{{ path('home') }}">Boockmania</a></h1>
+                <h1><a class="title" href="{{ path('app_book_index') }}">Boockmania</a></h1>
             </div>
 
             <nav>
