--- a/templates/auteur/show.html.twig
+++ b/templates/auteur/show.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Book index{% endblock %}
+{% block title %}Auteur{% endblock %}
 
 {% block body %}
-    <h1>Book index</h1>
+    <h1>{{ auteur.name }}</h1>
+
     <div class="contain">
         {% for book in books %}
             <div class="card">
@@ -16,7 +17,11 @@
             </div>
         {% endfor %}    
     </div>
+
+    <a href="{{ path('app_auteur_index') }}">Voir les auteurs</a>
     {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('app_book_new') }}">Ajouter un livre</a>
-    {% endif %}
+        <a href="{{ path('app_auteur_edit', {'id': auteur.id}) }}">edit</a>
+        {{ include('auteur/_delete_form.html.twig') }}
+    {% endif %} 
+
 {% endblock %}
