--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -3,40 +3,20 @@
 {% block title %}Book{% endblock %}
 
 {% block body %}
-    <h1>Book</h1>
+    <h1>{{ book.name }}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ book.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ book.name }}</td>
-            </tr>
-            <tr>
-                <th>Pages</th>
-                <td>{{ book.pages }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ book.price }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ book.description }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ book.image }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <img src="{{ book.image }}" alt="image">
 
-    <a href="{{ path('app_book_index') }}">back to list</a>
+    <p>{{ book.pages }} pages</p>
 
-    <a href="{{ path('app_book_edit', {'id': book.id}) }}">edit</a>
+    <td>{{ book.price }} €</td>
 
-    {{ include('book/_delete_form.html.twig') }}
+    <p>{{ book.description }}</p>
+
+    <a href="{{ path('app_book_index') }}">Retourner voir la liste</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('app_book_edit', {'id': book.id}) }}">Modifier</a>
+        {{ include('book/_delete_form.html.twig') }}
+    {% endif %}
+    
 {% endblock %}
