--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>{{ titre }}</h1>
+    <img class="img-fluid baniere" src="https://estivareilles42.fr/wp-content/uploads/sites/167/2019/04/banniere-biblio3.png" alt="">
+    <h1 class="text-center">{{ titre }}</h1>
 {% endblock %}
