--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,28 +4,7 @@
 }
 
 h1 {
-    color: rebeccapurple;
-}
-
-header {
-    box-shadow: 0px 5px 6px grey;
-
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-
-ul {
-    margin: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-between;
-}
-
-li {
-    list-style-type: none;
-    margin: 10px;
-    font-size :1.5em;
+    color: black;
 }
 
 a {
@@ -45,4 +24,20 @@ a {
     display: flex;
     align-items: center;
     flex-direction: column;
+    border: solid 3px black;
+}
+
+.baniere {
+    width: 100%;
+    height: 30%;
+}
+
+img {
+    width: 300px;
+    height: 400px;
+}
+
+.img_petit{
+    width: 100px;
+    height: 100px;
 }
