--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -1,35 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Auteur index{% endblock %}
+{% block title %}Tous les auteurs{% endblock %}
 
 {% block body %}
-    <h1>Auteur index</h1>
+    <h1>Tous les auteurs</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="d-flex justify-content-around">
         {% for auteur in auteurs %}
-            <tr>
-                <td>{{ auteur.id }}</td>
-                <td>{{ auteur.name }}</td>
-                <td>
-                    <a href="{{ path('app_auteur_show', {'id': auteur.id}) }}">show</a>
-                    <a href="{{ path('app_auteur_edit', {'id': auteur.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
+            <a class="btn btn-primary" href="{{ path('app_auteur_show', {'id': auteur.id}) }}">{{ auteur.name }}</a>
         {% endfor %}
-        </tbody>
-    </table>
+    </div>
 
-    <a href="{{ path('app_auteur_new') }}">Create new</a>
+    <a href="{{ path('app_auteur_new') }}">Ajouter un auteur</a>
 {% endblock %}
