--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -17,25 +18,41 @@
 
     </head>
     <body>
-        <header>
-            <div class="header-left">
-                <h1><a class="title" href="{{ path('home') }}">Boockmania</a></h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light bg-gradient">
+            <div class="container_fluid ml-5">
+                <a class="navbar-brand fs-3" href="{{ path('home') }}">Bookmania</a>
             </div>
-
-            <nav>
-                <ul>
-                    <li><a href="{{ path('app_book_index') }}">Livre</a></li>
-                    <li><a href="{{ path('app_categorie_index') }}">Categorie</a></li>
-                    <li><a href="{{ path('app_auteur_index') }}">Auteur</a></li>
-                    {% if app.user %}
-                        <li><a href="{{ path('app_logout') }}">Deconnection</a></li>
-                    {% else %}
-                        <li><a href="{{ path('app_login') }}">Connection</a></li>
-                    <li><a href="{{ path('app_register') }}">Inscription</a></li>
-                    {% endif %}
-                </ul>   
-            </nav>
-        </header>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{{ path('app_book_index') }}">Livre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_categorie_index') }}">Catégorie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_auteur_index') }}">Auteur</a>
+                        </li>
+                        {% if app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_panier_index') }}">Panier</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnection</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_login') }}">Connection</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </ul> 
+            </div>
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
