--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -3,19 +3,22 @@
 {% block title %}Book{% endblock %}
 
 {% block body %}
-    <h1>{{ book.name }}</h1>
+    <h1 class="text-center m-5">{{ book.name }}</h1>
+    <div class="d-flex justify-content-center flex-column">
+        <img  class="img-fluid" src="{{ book.image }}" alt="image">
 
-    <img src="{{ book.image }}" alt="image">
+        <p>{{ book.pages }} pages</p>
 
-    <p>{{ book.pages }} pages</p>
+        <td>{{ book.price }} €</td>
 
-    <td>{{ book.price }} €</td>
-
-    <p>{{ book.description }}</p>
-
-    <a href="{{ path('app_book_index') }}">Retourner voir la liste</a>
+        <p>{{ book.description }}</p>
+    </div>
+    {% if app.user %}
+        <a class="btn btn-success" href="{{ path('app_panier_add_book', {'id': book.id}) }}">Ajouter au panier</a>
+    {% endif %}
+    <a class="btn btn-primary" href="{{ path('app_book_index') }}">Retourner voir la liste</a>
     {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('app_book_edit', {'id': book.id}) }}">Modifier</a>
+        <a class="btn btn-warning" href="{{ path('app_book_edit', {'id': book.id}) }}">Modifier</a>
         {{ include('book/_delete_form.html.twig') }}
     {% endif %}
     
