--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,5 +54,8 @@
             </div>
         </nav>
         {% block body %}{% endblock %}
+        <footer>
+            <p>Copyright - Ulgen Téo - 2022</p>
+        </footer>
     </body>
 </html>
