--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,3 +41,20 @@ img {
     width: 100px;
     height: 100px;
 }
+
+footer {
+    background-color: black;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer p {
+    color: white;
+    margin-top: 10px;
+    font-size: large;
+}
